[gd_scene load_steps=4 format=3 uid="uid://bcmvkkx6ovlfh"]

[ext_resource type="Texture2D" uid="uid://d1u03ryicebem" path="res://Interface/Menu_Game/Backgound_main_menu.png" id="1_6hw7b"]
[ext_resource type="Script" uid="uid://sah41kihxeif" path="res://Interface/Menu_Game/menu_game.gd" id="1_yl80j"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1vqnn"]
texture = ExtResource("1_6hw7b")

[node name="menu_game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yl80j")

[node name="BackGround" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1vqnn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 238.0
offset_bottom = 512.0

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Start"
flat = true
alignment = 0

[node name="option" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Option"
flat = true
alignment = 0

[node name="credit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Credit"
flat = true
alignment = 0

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Exit"
flat = true
alignment = 0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 77.0
offset_right = 445.0
offset_bottom = 163.0
theme_override_colors/font_color = Color(0.956863, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Imperium Ruina"

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="VBoxContainer/credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
